--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <title>朝礼当番決めアプリ</title>
 </head>
 <script src="random.js"></script>
 
 <body>
-    <ul>
+    <ul class="sample1">
         <!-- 追加の場合はliタグで囲む、削除の場合は該当者の行をコメントor削除 -->
         <li>鯰越</li>
         <li>谷口</li>
