--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel=”stylesheet” href=”https://broccoli1983.github.io/Javascript_random/style.css” />
+    <link rel=”stylesheet” href=”style.css” />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <title>朝礼当番決めアプリ</title>
 </head>
@@ -14,14 +14,14 @@
 <body>
     <ul class="sample1">
         <!-- 追加の場合はliタグで囲む、削除の場合は該当者の行をコメントor削除 -->
-        <li>鯰越</li>
-        <li>谷口</li>
-        <li>井上</li>
-        <li>高瀬</li>
-        <li>安部</li>
-        <li>荒井</li>
-        <li>高見</li>
-        <li>飯田</li>
+        <li>0</li>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+        <li>6</li>
+        <li>7</li>
     </ul>
 </body>
 
